force-app/main/default/objects/fferpcore__DataTransformation__c/fferpcore__DataTransformation__c.object-meta.xml
<CustomObject>
    <customHelpPage>fferpcore__DataTransformationHelp</customHelpPage>
    <description>A target value in a Data Transformation Table. Contains criteria to meet, as well as a target value when met.</description>
    <label>Data Transformation</label>
    <nameField>
        <displayFormat>DT-{000000}</displayFormat>
        <label>Data Transformation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Transformations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>