force-app/main/default/objects/fferpcore__DataTransformation__c/fields/fferpcore__DataTransformationTable__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__DataTransformationTable__c</fullName>
    <label>Data Transformation Table</label>
    <referenceTo>fferpcore__DataTransformationTable__c</referenceTo>
    <relationshipName>DataTransformationRows</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>