force-app/main/default/objects/fferpcore__DataTransformation__c/fields/fferpcore__TargetValue__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__TargetValue__c</fullName>
    <description>Value to return if the associated Data Table Criteria are met.</description>
    <inlineHelpText>Value to return if the associated Data Table Criteria are met.</inlineHelpText>
    <label>Target Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>