force-app/main/default/objects/fferpcore__DataTransformation__c/listViews/fferpcore__All.listView-meta.xml
<ListView>
    <fullName>fferpcore__All</fullName>
    <columns>NAME</columns>
    <columns>fferpcore__TargetValue__c</columns>
    <columns>fferpcore__DataTransformationTable__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>